<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.NoActionBar">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Welcome, Please enter your PIN to continue"
        android:textColor="@color/blueGlow"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="76dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="179dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingEnd="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingStart="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="23dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingEnd="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_4"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_5"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingStart="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_6"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="23dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingEnd="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_7"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_8"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:paddingStart="15dp">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/_9"
                    android:textAlignment="center"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="23dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.flashphoner.wcsexample.video_chat.CustomImageButton
                    android:id="@+id/imgBtn0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/pin_num_buttons_outline" />

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/_0"
                    android:textColor="@color/blueGlow"
                    android:textSize="34sp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelLay"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="58dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                app:srcCompat="@drawable/button_blur" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageButton"
                android:gravity="center"
                android:text="TextView" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/imageButton22"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                app:srcCompat="@drawable/baseline_gesture_white_18dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="115dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Drawing Mode"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageButton23"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                app:srcCompat="@drawable/arrow_down" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="115dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Arrow Mode"
                android:textSize="12sp" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>